--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/fondo">
+    tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mainToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:background="@drawable/white_rect_background"
-        app:layout_constraintStart_toStartOf="parent"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivLogoTlaltec"
+        android:layout_width="100dp"
+        android:layout_height="130dp"
+        android:layout_margin="20dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/mainBoxHeader"
-        />
+        app:srcCompat="@drawable/logotlaltec" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivNameTlaltec"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivLogoTlaltec"
+        app:srcCompat="@drawable/namelogo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainBoxHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
+        app:layout_constraintTop_toBottomOf="@id/ivNameTlaltec"
         app:layout_constraintBottom_toTopOf="@+id/mainBoxForm"
         >
 
@@ -34,8 +43,8 @@
             android:id="@+id/mainTvLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#1A237E"
-            android:textSize="30dp"
+            android:textColor="#1E232C"
+            android:textSize="26dp"
             android:textStyle="bold"
             android:textAlignment="center"
             android:text="@string/mainTvTitulo"
@@ -53,62 +62,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainBoxHeader"
-        app:layout_constraintBottom_toTopOf="@id/mainBoxLinks">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/mainBtnAcceder"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginHorizontal="40dp"
             android:backgroundTint="@color/green"
             android:text="@string/mainBtnLogin"
             android:textSize="16dp"
-            app:cornerRadius="20dp"
+            app:cornerRadius="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/mainBtnCrearCuenta"/>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mainBoxLinks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainBoxForm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-
-        <TextView
-            android:id="@+id/mainTvNoTienesCuenta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/mainBtnCrearCuenta"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="@color/white"
+            android:text="@string/mainBtnResgister"
+            android:textColor="@color/green"
             android:textSize="16dp"
-            android:text="@string/mainTvNoTienesCuenta"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_chainStyle="packed"
+            app:cornerRadius="10dp"
+            app:strokeColor="@color/green"
+            app:strokeWidth="1dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/mainTvCrearCuenta"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/mainTvCrearCuenta"
-            android:layout_width="wrap_content"
-            android:layout_height="49dp"
-            android:textStyle="bold"
-            android:textSize="16dp"
-            android:text="@string/mainTvCrearCuenta"
-            android:gravity="center"
-            android:textColor="#1A237E"
-            app:layout_constraintStart_toEndOf="@id/mainTvNoTienesCuenta"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@id/mainBtnAcceder"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
