--- a/app/src/main/res/layout/activity_mishuertos.xml
+++ b/app/src/main/res/layout/activity_mishuertos.xml
@@ -4,79 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".huerto.MisHuertos"
-    android:background="@drawable/fondo">
+    tools:context=".huerto.MisHuertos">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mishuertosToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/white_rect_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mishuertosBoxTitle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="20dp"
-        android:background="@drawable/white_rect_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mishuertosToolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-
-        <TextView
-            android:id="@+id/mishuertosTvLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/gris"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:text="@string/mishuertosTvTitulo"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mishuertosBoxTitle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/mishuertosLV"
-            />
-
-        <ListView
-            android:id="@+id/mishuertosLV"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mishuertosTvLayout"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/huertoitem"
+            >
 
-            />
+            <TextView
+                android:id="@+id/mishuertosTvLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/gris"
+                android:textSize="32dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/mishuertosTvTitulo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/mishuertosLV"
+                />
+
+            <ListView
+                android:id="@+id/mishuertosLV"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mishuertosTvLayout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/huertoitem"
+
+                />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/mishuertosFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="15dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_add_24"
-        tools:ignore="SpeakableTextPresentCheck">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/mishuertosFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/baseline_add_24"
+            tools:ignore="SpeakableTextPresentCheck">
 
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
