--- a/app/src/main/res/layout/huertoitem.xml
+++ b/app/src/main/res/layout/huertoitem.xml
@@ -18,53 +18,122 @@
         app:layout_constraintBottom_toBottomOf="parent"
         >
 
-        <TextView
-            android:id="@+id/mishuertosTvNomHuerto"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/mishuertosTvNomHuerto"
-            android:textAlignment="center"
-            android:textColor="@color/green_low"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/mishuertosTvUbicacion"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/mishuertosTvUbicacion"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mishuertosBoxInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/mishuertosTvUbicacion"
-            android:textColor="@color/green_low"
-            android:gravity="start"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/mishuertosBoxTemperatura"
+            android:layout_marginHorizontal="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mishuertosTvNomHuerto" />
+            app:layout_constraintEnd_toStartOf="@id/mishuertosBoxTemperatura"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+            <TextView
+                android:id="@+id/mishuertosTvNomHuerto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="10dp"
+                android:text="@string/mishuertosTvNomHuerto"
+                android:textAlignment="center"
+                android:textColor="@color/green_low"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/mishuertosTvUbicacion"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/mishuertosTvUbicacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@string/mishuertosTvUbicacion"
+                android:textColor="@color/green_low"
+                android:gravity="start"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/mishuertosTvAlertas"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mishuertosTvNomHuerto" />
+
+            <TextView
+                android:id="@+id/mishuertosTvAlertas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="8dp"
+                android:layout_marginStart="10dp"
+                android:text="@string/mishuertosTvAlertas"
+                android:textColor="@color/green_low"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/mishuertosTvNumAlertas"
+                app:layout_constraintTop_toBottomOf="@+id/mishuertosTvUbicacion"
+                app:layout_constraintBottom_toTopOf="@id/mishuertosTvPronostico"/>
+
+            <TextView
+                android:id="@+id/mishuertosTvNumAlertas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:text="@string/mishuertosTvNumAlertas"
+                android:textColor="@color/green_low"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/mishuertosTvAlertas"
+                app:layout_constraintStart_toEndOf="@+id/mishuertosTvAlertas"
+                app:layout_constraintTop_toTopOf="@+id/mishuertosTvAlertas" />
+
+            <TextView
+                android:id="@+id/mishuertosTvPronostico"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/mishuertosTvPronostico"
+                android:textColor="@color/green_low"
+                android:gravity="start"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mishuertosTvAlertas"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:id="@+id/mishuertosTvNumPronosticos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:text="@string/mishuertosTvNumPronosticos"
+                android:textColor="@color/green_low"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/mishuertosTvPronostico"
+                app:layout_constraintStart_toEndOf="@+id/mishuertosTvPronostico"
+                app:layout_constraintTop_toTopOf="@+id/mishuertosTvPronostico" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/mishuertosBoxTemperatura"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_marginHorizontal="15dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/mishuertosBoxInfo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mishuertosTvUbicacion"
-            app:layout_constraintBottom_toTopOf="@id/mishuertosTvNumAlertas"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             >
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/mishuertosSivTemperatura"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
                 app:srcCompat="@drawable/termometro"
                 android:tint="@color/green_low"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,8 +143,9 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/mishuertosSivHumedad"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
                 app:srcCompat="@drawable/humedad"
                 android:tint="@color/green_low"
                 app:layout_constraintStart_toEndOf="@+id/mishuertosSivTemperatura"
@@ -89,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/mishuertosTvTemperatura"
                 android:textColor="@color/green_low"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -103,7 +173,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/mishuertosTvCentigrados"
                 android:textColor="@color/green_low"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/mishuertosTvTemperatura"
@@ -116,7 +186,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/mishuertosTvHumedad"
                 android:textColor="@color/green_low"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -131,7 +201,7 @@
                 android:gravity="center"
                 android:text="@string/mishuertosTvPorcentaje"
                 android:textColor="@color/green_low"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/mishuertosTvHumedad"
@@ -140,63 +210,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/mishuertosTvAlertas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/mishuertosTvAlertas"
-            android:textColor="@color/green_low"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mishuertosBoxTemperatura"
-            app:layout_constraintBottom_toTopOf="@id/mishuertosTvPronostico"/>
-
-        <TextView
-            android:id="@+id/mishuertosTvNumAlertas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:text="@string/mishuertosTvNumAlertas"
-            android:textColor="@color/green_low"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toEndOf="@+id/mishuertosTvAlertas"
-            app:layout_constraintTop_toBottomOf="@+id/mishuertosBoxTemperatura"
-            app:layout_constraintBottom_toTopOf="@+id/mishuertosTvNumPronosticos" />
-
-        <TextView
-            android:id="@+id/mishuertosTvPronostico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="@string/mishuertosTvPronostico"
-            android:textColor="@color/green_low"
-            android:gravity="start"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mishuertosTvAlertas"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <TextView
-            android:id="@+id/mishuertosTvNumPronosticos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="@string/mishuertosTvNumPronosticos"
-            android:textColor="@color/green_low"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toEndOf="@+id/mishuertosTvPronostico"
-            app:layout_constraintTop_toBottomOf="@+id/mishuertosTvNumAlertas"
-            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
