--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="blue">#0D47A1</color>
     <color name="black">#FF000000</color>
-    <color name="green">#4F6931</color>
+    <color name="green">#1E232C</color>
     <color name="gris">#222222</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#8692f7</color>
