--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:id="@+id/mainTvLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#1E232C"
+            android:textColor="@color/dark2"
             android:textSize="26dp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -86,7 +86,7 @@
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/white"
             android:text="@string/mainBtnResgister"
-            android:textColor="@color/green"
+            android:textColor="@color/dark2"
             android:textSize="16dp"
             app:cornerRadius="10dp"
             app:strokeColor="@color/green"
