--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:textColor="@color/gris"
+        android:textColor="@color/dark2"
         android:textSize="32dp"
         android:textStyle="bold"
         android:text="@string/registerTvTitulo"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -124,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -163,7 +163,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
