--- a/app/src/main/res/drawable/green_rect_background.xml
+++ b/app/src/main/res/drawable/green_rect_background.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/green" />
-    <corners android:radius="30dp" />
+    <solid android:color="@color/gris" />
+    <corners android:radius="10dp" />
+    <stroke android:color="@color/blue" android:width="2dp"/>
+
 
 
 </shape>
