--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:textColor="@color/gris"
+        android:textColor="@color/dark2"
         android:textSize="32dp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@color/gris"
+            android:textColor="@color/dark2"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textAlignment="center"
