--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,12 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="blue">#0D47A1</color>
+    <color name="dark2">#333333</color>
+    <color name="blue">#8391A1</color>
     <color name="black">#FF000000</color>
     <color name="green">#1E232C</color>
-    <color name="gris">#222222</color>
+    <color name="gris">#F8F8F8</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#8692f7</color>
-    <color name="green_low">#D8D8D8</color>
+    <color name="green_low">#333333</color>
 </resources>
