--- a/app/src/main/res/layout/activity_plagascuarentenarias.xml
+++ b/app/src/main/res/layout/activity_plagascuarentenarias.xml
@@ -4,21 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".huerto.addhuerto.plagas.plagascuarentenarias"
-    android:background="@drawable/fondo">
+    tools:context=".huerto.addhuerto.plagas.plagascuarentenarias">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/plagasCToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/white_rect_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/plagasCBoxLayout"
@@ -26,10 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="20dp"
-        android:background="@drawable/white_rect_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plagasCToolbar"
+        app:layout_constraintTop_toTopOf="parent"
         >
 
 
@@ -48,7 +35,7 @@
                 android:id="@+id/plagasCTvTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gris"
+                android:textColor="@color/dark2"
                 android:textSize="28dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -64,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:layout_marginHorizontal="40dp"
-                android:textColor="@color/gris"
+                android:textColor="@color/dark2"
                 android:textSize="16dp"
                 android:textAlignment="center"
                 android:text="@string/plagasCTvInstruccion"
